# htvg

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/: copilot-instructions.md
crates/htvg-cli/: Cargo.toml
crates/htvg-cli/src/: main.rs
crates/htvg-core/: Cargo.toml
crates/htvg-core/src/: element.rs  layout.rs  lib.rs  render.rs  svg.rs  text.rs
crates/htvg-core/tests/: playbadges_snapshot.rs
crates/htvg-core/tests/snapshots/: playbadges_snapshot__flex_grow_layout.snap  playbadges_snapshot__og_image_layout.snap  playbadges_snapshot__playbadge_dark.snap  playbadges_snapshot__playbadge_dark_norating.snap  playbadges_snapshot__playbadge_light.snap
crates/htvg-wasm/: Cargo.toml
crates/htvg-wasm/src/: lib.rs
examples/: badge-row.json  card.json  hello.json  playbadge-dark-norating.json  playbadge-dark.json  playbadge-light.json
src/: layout.rs  lib.rs  render.rs  svg.rs  text.rs
