[package]
name = "htvg"
version = "0.1.0"
edition = "2024"
description = "JSON element tree to SVG compiler with correct text layout"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# JSON deserialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Layout
taffy = "0.9.2"

# Text layout (parley + dependencies)
parley = "0.7.0"
ttf-parser = "0.25.1"

# WASM
wasm-bindgen = "0.2.108"
serde-wasm-bindgen = "0.6.5"

# Error handling
thiserror = "2.0.18"

# Optional WASM debugging
console_error_panic_hook = { version = "0.1.7", optional = true }

[features]
default = []
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3.58"

[profile.release]
opt-level = "s"
lto = true
