[package]
name = "htvg-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for HTVG - JSON element tree to SVG compiler"
license = "MIT OR Apache-2.0"

[[bin]]
name = "htvg"
path = "src/main.rs"

[dependencies]
htvg = { path = "../.." }
clap = { version = "4", features = ["derive"] }
serde_json = "1.0.149"
