[package]
name = "htvg-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for HTVG - JSON element tree to SVG compiler"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pavi2410/htvg"
homepage = "https://github.com/pavi2410/htvg"
readme = "../../README.md"
keywords = ["svg", "json", "cli", "compiler"]
categories = ["command-line-utilities", "graphics"]

[[bin]]
name = "htvg"
path = "src/main.rs"

[dependencies]
htvg-core = { path = "../htvg-core", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
serde_json = "1.0.149"
