[package]
name = "htvg-core"
version = "0.1.0"
edition = "2024"
description = "JSON element tree to SVG compiler with correct text layout"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pavi2410/htvg"
homepage = "https://github.com/pavi2410/htvg"
readme = "../../README.md"
keywords = ["svg", "json", "layout", "text", "flexbox"]
categories = ["graphics", "rendering", "wasm"]

[dependencies]
# JSON deserialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Layout
taffy = "0.9.2"

# Text layout (parley + dependencies)
parley = "0.7.0"
ttf-parser = "0.25.1"

# Base64 decoding (for embedded fonts)
base64 = "0.22"

# Error handling
thiserror = "2.0.18"
