[package]
name = "htvg-wasm"
version = "0.1.0"
edition = "2024"
description = "WASM bindings for HTVG"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
htvg-core = { path = "../htvg-core" }
wasm-bindgen = "0.2.108"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.149"
console_error_panic_hook = { version = "0.1.7", optional = true }

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3.58"
